--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Yuliya Yoncheva, PhD
 #logo: /assets/img/headshot_circle.png
-#description: tent below image show_downloads: true 
+description: [LinkedIn](https://www.linkedin.com/in/yuliya-yoncheva/details/featured/)
 theme: jekyll-theme-minimal
