--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Yuliya Yoncheva, PhD
 #logo: /assets/img/headshot_circle.png
-description: [LinkedIn](https://www.linkedin.com/in/yuliya-yoncheva/details/featured/)
+description: Building better decisions together
 theme: jekyll-theme-minimal
