Revise site description for clarity and focus
Updated the description to reflect a focus on education and decision-making skills in the AI era.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Yuliya Yoncheva, PhD
 #logo: /assets/img/headshot_circle.png
-description: Building better decisions together
+description: advancing education & promoting learner agency and decision-making skills for the AI era
+
 theme: jekyll-theme-minimal
